# rust-connection-di

./: Cargo.toml  docker-compose.yaml
mock-server/: db.json
src/: app.rs  main.rs  trait.rs
src/app/: mock_application.rs  production_application.rs
