[package]
name = "rust-connection-di"
version = "0.1.0"
authors = ["scabyms <hiroaki_yamashita@caddi.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.28"
tokio = { version = "0.2", features = ["macros"] }
reqwest = "0.10.4"
envy = "0.4.1"